Bug 742393 - Don't inline array.concat if the array prototype has indexed properties. r=bhackett